<resources>
    <string name="app_name">Calc</string>
    <string name="d0">0</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="div">/</string>
    <string name="mul">X</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="clear">clear</string>
    <string name="delete_one_symbol">C</string>
    <string name="plus_minus">+/-</string>
    <string name="dot">.</string>
    <string name="exponential">E</string>
    <string name="result">=</string>
    <string name="size">30sp</string>

</resources>
